--- a/Efteling Demo/css/sem.css
+++ b/Efteling Demo/css/sem.css
@@ -1,8 +1,8 @@
 /* CSS crunched with Crunch - http://crunchapp.net/ */
 html, body {padding: 0px; margin: 0px;}
 div.page[name='MasterPage'] img{max-width:100% !important;display:block;}
-div.page[name='MasterPage'] div.placeholder[name='HomeView']{background-image:url('../img/app/Home_Paralax_Canvas.png');background-size:cover;}
-div.mainHeader{position:absolute;width:100%;}
+div.page[name='MasterPage'] div.placeholder[name='HomeView']{background-image:url('../img/app/Home_Paralax_Canvas.png');background-size:cover;padding-top:30%;}
+div#mainHeader{position:absolute;width:100%;z-index:100;padding-top:10px;}
 .home-button{display:inline-block;max-width:25%;}
 #efteling-btn{display:block;max-width:12%;margin:auto;}
 #experience-btn{display:block;max-width:34%;margin:auto;}
