--- a/Efteling Demo/css/sem.css
+++ b/Efteling Demo/css/sem.css
@@ -1,7 +1,7 @@
 /* CSS crunched with Crunch - http://crunchapp.net/ */
-html,body{padding:0px;margin:0px;}
+html,body{padding:0px;margin:0px;overflow:hidden;}
 div.page[name='MasterPage'] img{max-width:100% !important;display:block;}
-div.page[name='MasterPage'] div.placeholder[name='HomeView']{background-image:url('../img/app/Home_Paralax_Canvas.png');background-size:contain;}
+div.page[name='MasterPage'] div.placeholder[name='HomeView']{background-image:url('../img/app/Home_Paralax_Canvas.png');background-size:cover;}div.page[name='MasterPage'] div.placeholder[name='HomeView'] div.body{padding-top:25%;}
 div.page[name='MasterPage'] div.header[name='MasterPage']{position:relative;width:100%;}
 div#mainHeader{position:absolute;width:100%;z-index:100;padding-top:10px;}
 .home-button{display:inline-block;max-width:25%;}
