--- a/Efteling Demo/css/sem.css
+++ b/Efteling Demo/css/sem.css
@@ -1,14 +1,14 @@
 /* CSS crunched with Crunch - http://crunchapp.net/ */
 html,body{padding:0px;margin:0px;overflow:hidden;}
 div.page[name='MasterPage'] img{max-width:100% !important;display:block;}
-div.page[name='MasterPage'] div.placeholder[name='HomeView']{background-image:url('../img/app/Home_Paralax_Canvas.png');background-size:cover;}div.page[name='MasterPage'] div.placeholder[name='HomeView'] div.body{padding-top:25%;}
+div.page[name='MasterPage'] div.placeholder[name='HomeView']{background-image:url('../img/app/Home_Paralax_Canvas.png');background-size:cover;}div.page[name='MasterPage'] div.placeholder[name='HomeView'] div.body{padding-top:40%;}
 div.page[name='MasterPage'] div.header[name='MasterPage']{position:relative;width:100%;}
 div#mainHeader{position:absolute;width:100%;z-index:100;padding-top:10px;}
 .home-button{display:inline-block;max-width:25%;}
 #efteling-btn{display:block;max-width:12%;margin:auto;}
 #experience-btn{display:block;max-width:34%;margin:auto;}
-#me-btn{margin-left:10%;}
-#favorites-btn{margin-left:35%;}
-#map-btn{margin-left:5%;}
-#stories-btn{margin-left:11%;}
-#pois-btn{margin-left:11%;}
+#me-btn{margin:auto auto -10% 10%;}
+#favorites-btn{margin:auto auto -10% 30%;}
+#map-btn{margin:-10% auto auto 5%;}
+#stories-btn{margin:-10% auto;display:block;}
+#pois-btn{margin:-10% auto auto 40%;}
