--- a/Efteling Demo/css/sem.css
+++ b/Efteling Demo/css/sem.css
@@ -1,8 +1,10 @@
 /* CSS crunched with Crunch - http://crunchapp.net/ */
 html,body{padding:0px;margin:0px;overflow:hidden;}
+.background-image{max-width:100% !important;display:block;}
 div.page[name='MasterPage'] img{max-width:100% !important;display:block;}
-div.page[name='MasterPage'] div.placeholder[name='HomeView']{background-image:url('../img/app/Home_Paralax_Canvas.png');background-size:cover;}div.page[name='MasterPage'] div.placeholder[name='HomeView'] div.body{padding-top:40%;}
+div.page[name='MasterPage'] div.placeholder[name='HomeView']{background-image:url('../img/app/Home_Paralax_Canvas.png');background-size:cover;}div.page[name='MasterPage'] div.placeholder[name='HomeView'] div.body{padding-top:50%;}
 div.page[name='MasterPage'] div.header[name='MasterPage']{position:relative;width:100%;}
+div.page[name='MasterPage'] div.placeholder div.body{height:100%;}
 div#mainHeader{position:absolute;width:100%;z-index:100;padding-top:10px;}
 .home-button{display:inline-block;max-width:25%;}
 #efteling-btn{display:block;max-width:12%;margin:auto;}
@@ -12,3 +14,5 @@ div#mainHeader{position:absolute;width:100%;z-index:100;padding-top:10px;}
 #map-btn{margin:-10% auto auto 5%;}
 #stories-btn{margin:-10% auto;display:block;}
 #pois-btn{margin:-10% auto auto 40%;}
+#pois-detailScreen{display:none;background:rgba(0, 0, 0, 0.8);position:absolute;z-index:100;height:100%;width:100%;}#pois-detailScreen .poi{display:none;z-index:101;margin:10% auto;width:80%;}#pois-detailScreen .poi .pois-detailScreen-header .header-content{margin:-14% auto;position:absolute;text-align:center;width:80%;z-index:200;font-size:2.7vw;}#pois-detailScreen .poi .pois-detailScreen-header .header-content h1{width:70%;margin:5% auto;}
+#pois-detailScreen .poi .pois-detailScreen-header .pois-detailScreen-close{height:100%;position:absolute;right:0;top:0;width:15%;cursor:pointer;}
