--- a/Efteling Demo/css/sem.css
+++ b/Efteling Demo/css/sem.css
@@ -4,7 +4,7 @@ div.page[name='MasterPage'] img{max-width:100% !important;display:block;}
 div.page[name='MasterPage'] div.placeholder[name='HomeView']{background-image:url('../img/app/Home_Paralax_Canvas.png');background-size:cover;}div.page[name='MasterPage'] div.placeholder[name='HomeView'] div.header div#homeTopView{width:100%;text-align:center;background-image:url('../img/app/topDownBgRed_canvas.png');background-size:cover;display:none;position:absolute;z-index:100;}div.page[name='MasterPage'] div.placeholder[name='HomeView'] div.header div#homeTopView a.homeTopView-button{display:inline-block;max-width:15%;margin:4%;}
 div.page[name='MasterPage'] div.placeholder[name='HomeView'] div.body{padding-top:50%;}
 div.page[name='MasterPage'] div.header[name='MasterPage']{position:relative;width:100%;}
-div.page[name='MasterPage'] div.placeholder div.body{height:100%;}
+div.page[name='MasterPage'] div.placeholder{display:none;}div.page[name='MasterPage'] div.placeholder div.body{height:100%;}
 div#mainHeader{position:absolute;width:100%;z-index:100;padding-top:10px;}
 .home-button{display:inline-block;max-width:25%;}
 #efteling-btn{display:block;max-width:12%;margin:auto;}
