--- a/Efteling Demo/view/HomeView.html
+++ b/Efteling Demo/view/HomeView.html
@@ -23,6 +23,7 @@
 		</a>
 	</div>
 	<div class='footer'>
+		{{>tpl-HomeBottomView}}
 	</div>
 </script>
 
@@ -44,10 +45,20 @@
 </script>
 
 <script id='tpl-HomeBottomView' type='text/html'>
-    <div class='header'>
-	</div>
-	<div class='body'>
-	</div>
-	<div class='footer'>
+    <div id='homeBottomView'>
+		<div class='balk' id='search'>
+			<h1>Zoeken</h1>
+			<input type='text' />
+		</div>
+		<div class='balk' id='hotel'>
+			<h1>Hotel</h1>
+			<p>Weekendje, Park & Golf</p>
+		</div>
+		<div class='balk' id='about'>
+			<h1>Over de Efteling</h1>
+		</div>
+		<div class='balk' id='ehbo'>
+			<h1>EHBO</h1>
+		</div>
 	</div>
 </script>
