--- a/Efteling Demo/css/sem.css
+++ b/Efteling Demo/css/sem.css
@@ -2,8 +2,7 @@
 .background-image{max-width:100% !important;display:block;}
 div.page[name='MasterPage'] img{max-width:100% !important;display:block;}
 div.page[name='MasterPage'] div.placeholder[name='HomeView']{background-image:url('../img/app/Home_Paralax_Canvas.png');background-size:cover;}div.page[name='MasterPage'] div.placeholder[name='HomeView'] div.header div#homeTopView{width:100%;text-align:center;background-image:url('../img/app/topDownBgRed_canvas.png');background-size:cover;display:none;position:absolute;z-index:100;}div.page[name='MasterPage'] div.placeholder[name='HomeView'] div.header div#homeTopView a.homeTopView-button{display:inline-block;max-width:15%;margin:4%;}
-div.page[name='MasterPage'] div.placeholder[name='HomeView'] div.body{padding-top:50%;}
-div.page[name='MasterPage'] div.placeholder[name='HomeView'] div.footer div#homeBottomView{width:100%;text-align:center;background-image:url('../img/app/topDownBgRed_canvas.png');background-size:cover;position:absolute;z-index:100;}div.page[name='MasterPage'] div.placeholder[name='HomeView'] div.footer div#homeBottomView h1{width:70%;margin:5% auto;color:white;}
+div.page[name='MasterPage'] div.placeholder[name='HomeView'] div.footer div#homeBottomView{width:100%;text-align:center;background-image:url('../img/app/topDownBgRed_canvas.png');background-size:cover;position:absolute;z-index:100;font-size:2.7vw;font-size:10px;font-size:0.60rem;}div.page[name='MasterPage'] div.placeholder[name='HomeView'] div.footer div#homeBottomView h1{width:70%;margin:5% auto;color:white;}
 div.page[name='MasterPage'] div.placeholder[name='HomeView'] div.footer div#homeBottomView input{width:80%;}
 div.page[name='MasterPage'] div.placeholder[name='HomeView'] div.footer div#homeBottomView p{color:white;}
 div.page[name='MasterPage'] div.header[name='MasterPage']{position:relative;width:100%;}
@@ -12,7 +11,7 @@ div#mainHeader{position:absolute;width:100%;z-index:100;padding-top:10px;}
 .home-button{display:inline-block;max-width:25%;}
 #efteling-btn{display:block;max-width:12%;margin:auto;}
 #experience-btn{display:block;max-width:34%;margin:auto;}
-#me-btn{margin:auto auto -10% 10%;}
+#me-btn{margin:50% auto -10% 10%;}
 #favorites-btn{margin:auto auto -10% 30%;}
 #map-btn{margin:-10% auto auto 5%;}
 #stories-btn{margin:-10% auto;display:block;}
