--- a/Efteling Demo/view/HomeView.html
+++ b/Efteling Demo/view/HomeView.html
@@ -29,7 +29,7 @@
 
 <script id='tpl-HomeTopView' type='text/html'>
     <div id='homeTopView'>
-		<a href='#Photo/takePicture' class='homeTopView-button' id='photo_btn'>
+		<a href='#Me/takePicture' class='homeTopView-button' id='photo_btn'>
 			<img src='img/app/photo_bttn.png' />
 		</a>
 		<a href='#Me/shareItem' class='homeTopView-button' id='share_btn'>
