--- a/Efteling Demo/view/HomeView.html
+++ b/Efteling Demo/view/HomeView.html
@@ -35,7 +35,7 @@
 		<a href='#Me/shareItem' class='homeTopView-button' id='share_btn'>
 			<img src='img/app/share_bttn.png' />
 		</a>
-		<a href='#Park/render' class='homeTopView-button' id='crosshair_btn'>
+		<a href='#Park' class='homeTopView-button' id='crosshair_btn'>
 			<img src='img/app/crosshair_bttn.png' />
 		</a>
 		<a href='#Poi/waitingLines' class='homeTopView-button' id='waitingLines_btn'>
