--- a/Efteling Demo/view/PoiView.html
+++ b/Efteling Demo/view/PoiView.html
@@ -10,7 +10,7 @@
 
 <script id='tpl-poi' type='text/html'>
 	{{#pois}}
-		<div class='poi'>
+		<div class='poi-list'>
 			<img class='poi-img' src='{{image}}' />
 			<p>
 				<h2>{{category}}</h2>
