--- a/Efteling Demo/css/sem.css
+++ b/Efteling Demo/css/sem.css
@@ -1,8 +1,8 @@
 /* CSS crunched with Crunch - http://crunchapp.net/ */
 .background-image{max-width:100% !important;display:block;}
 div.page[name='MasterPage'] img{max-width:100% !important;display:block;}
-div.page[name='MasterPage'] div.placeholder[name='PoiView']{background-image:url('../img/app/poi-list.png');background-size:cover;}div.page[name='MasterPage'] div.placeholder[name='PoiView'] div.body{padding-top:15%;}div.page[name='MasterPage'] div.placeholder[name='PoiView'] div.body div.poi{text-transform:capitalize;cursor:pointer;padding-left:10px;}div.page[name='MasterPage'] div.placeholder[name='PoiView'] div.body div.poi h1{color:#5C0322;font-weight:normal;font-size:20px;margin:0px;}
-div.page[name='MasterPage'] div.placeholder[name='PoiView'] div.body div.poi h2{font-weight:normal;font-size:15px;margin:0px;}
+div.page[name='MasterPage'] div.placeholder[name='PoiView']{background-image:url('../img/app/poi-list.png');background-size:cover;}div.page[name='MasterPage'] div.placeholder[name='PoiView'] div.body div.poi-list{text-transform:capitalize;width:80%;padding-left:10px;}div.page[name='MasterPage'] div.placeholder[name='PoiView'] div.body div.poi-list h1{color:#5C0322;font-weight:normal;font-size:20px;margin:0px;}
+div.page[name='MasterPage'] div.placeholder[name='PoiView'] div.body div.poi-list h2{font-weight:normal;font-size:15px;margin:0px;}
 div.page[name='MasterPage'] div.placeholder[name='PoiView'] img.line{width:35%;margin:auto;}
 div.page[name='MasterPage'] div.placeholder[name='HomeView']{background-image:url('../img/app/Home_Paralax_Canvas.png');background-size:cover;}div.page[name='MasterPage'] div.placeholder[name='HomeView'] div.header div#homeTopView{width:100%;text-align:center;background-image:url('../img/app/topDownBgRed_canvas.png');background-size:cover;display:none;position:absolute;z-index:100;}div.page[name='MasterPage'] div.placeholder[name='HomeView'] div.header div#homeTopView a.homeTopView-button{display:inline-block;max-width:15%;margin:4%;}
 div.page[name='MasterPage'] div.placeholder[name='HomeView'] div.footer div#homeBottomView{width:100%;text-align:center;background-image:url('../img/app/topDownBgRed_canvas.png');background-size:cover;position:absolute;z-index:100;font-size:2.7vw;font-size:10px;font-size:0.60rem;}div.page[name='MasterPage'] div.placeholder[name='HomeView'] div.footer div#homeBottomView h1{width:70%;margin:5% auto;color:white;}
@@ -23,6 +23,6 @@ div#mainHeader{position:absolute;width:100%;z-index:100;}div#mainHeader a{paddin
 #pois-detailScreen{display:none;background:rgba(0, 0, 0, 0.8);position:absolute;z-index:100;height:100%;width:100%;}#pois-detailScreen .poi{display:none;z-index:101;margin:10% auto;width:80%;font-size:2.7vw;font-size:10px;font-size:0.60rem;}#pois-detailScreen .poi .pois-detailScreen-header .header-content{margin:-14% auto;position:absolute;text-align:center;width:80%;z-index:200;}#pois-detailScreen .poi .pois-detailScreen-header .header-content h1{width:70%;margin:5% auto;color:white;}
 #pois-detailScreen .poi .pois-detailScreen-header .pois-detailScreen-close{height:100%;position:absolute;right:0;top:0;width:15%;cursor:pointer;}
 #pois-detailScreen .poi .pois-detailScreen-body .body-content{margin:-85% auto auto 5%;position:absolute;width:70%;z-index:200;}
-html,body{padding:0px;margin:0px;overflow:hidden;-webkit-tap-highlight-color:rgba(0, 0, 0, 0);font-family:'Georgia';color:#3c3c3b;}
+html,body{padding:0px;margin:0px;font-family:'Georgia';color:#3c3c3b;}
 body{background-color:#9f0000;}
 a,img{border:none;}
